# coderd/apidoc/swagger.json
@@ -503,10 +503,7 @@
           "200": {
             "description": "OK",
             "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/codersdk.Experiment"
-              }
+              "$ref": "#/definitions/codersdk.ExperimentsResponse"
             }
           }
         }
@@ -7378,6 +7375,23 @@
         "ExperimentDeploymentHealthPage",
         "ExperimentDashboardTheme"
       ]
+    },
+    "codersdk.ExperimentsResponse": {
+      "type": "object",
+      "properties": {
+        "available": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/codersdk.Experiment"
+          }
+        },
+        "enabled": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/codersdk.Experiment"
+          }
+        }
+      }
     },
     "codersdk.ExternalAuth": {
       "type": "object",
