# coderd/experiments.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 
 	"github.com/coder/coder/v2/coderd/httpapi"
+	"github.com/coder/coder/v2/codersdk"
 )
 
 // @Summary Get experiments
@@ -11,9 +12,13 @@ import (
 // @Security CoderSessionToken
 // @Produce json
 // @Tags General
-// @Success 200 {array} codersdk.Experiment
+// @Success 200 {object} codersdk.ExperimentsResponse
 // @Router /experiments [get]
 func (api *API) handleExperimentsGet(rw http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
-	httpapi.Write(ctx, rw, http.StatusOK, api.Experiments)
+
+	httpapi.Write(ctx, rw, http.StatusOK, codersdk.ExperimentsResponse{
+		Enabled:   api.Experiments,
+		Available: codersdk.ExperimentsAll,
+	})
 }
