# site/src/api/queries/experiments.ts
@@ -1,11 +1,12 @@
 import * as API from "api/api";
-import { Experiments } from "api/typesGenerated";
+import { ExperimentsResponse } from "api/typesGenerated";
 import { getMetadataAsJSON } from "utils/metadata";
 
 export const experiments = () => {
   return {
     queryKey: ["experiments"],
     queryFn: async () =>
-      getMetadataAsJSON<Experiments>("experiments") ?? API.getExperiments(),
+      getMetadataAsJSON<ExperimentsResponse>("experiments") ??
+      API.getExperiments(),
   };
 };
