# site/src/testHelpers/entities.ts
@@ -1941,8 +1941,10 @@ export const MockEntitlementsWithUserLimit: TypesGen.Entitlements = {
   }),
 };
 
-export const MockExperiments: TypesGen.Experiment[] = ["moons"];
-
+export const MockExperiments: TypesGen.ExperimentsResponse = {
+  enabled: ["moons"],
+  available: ["moons", "dashboard_theme"],
+};
 export const MockAuditLog: TypesGen.AuditLog = {
   id: "fbd2116a-8961-4954-87ae-e4575bd29ce0",
   request_id: "53bded77-7b9d-4e82-8771-991a34d759f9",
